--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<title>Start page</title>
-</head>
+  <meta charset="utf-8">
+  <title>BooklingMini</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--CDN Import materialize.css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<link rel="stylesheet" href="styles.0875535b5a50d49f30d0.css"></head>
 <body>
-<h1>Hello world!</h1>
-</body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.5bd3582e6f2a963862df.js"></script><script type="text/javascript" src="main.d004456df61f1c295cdc.js"></script></body>
 </html>
