--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BooklingMini</title>
+  <title>Perspective Library</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
